# Mimic_Claude_Code_CLI

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_VERIFICATION.md  QUICKSTART.md  README.md  TESTING.md  TOOL_ERROR_FIX.md  TodoList.css  TodoList.jsx  VISUAL_ARCHITECTURE.md  WHY_WRITE_FILE_ERROR_OCCURS.md  WORKFLOW_DETAILED.md  WRITE_FILE_FIX_SOLUTION.md  agent.py  app.py  claude_code_cli_article.md  data_processing.py  fastapi_rest_api.py  main.py  pyproject.toml  requirements.txt  test_setup.py
static/: app.js  index.html  styles.css
tools/: __init__.py  code_tools.py  file_tools.py
